--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,3 +14,11 @@
 @import "layout/products";
 
 @import "pages/home";
+
+// $grid-breakpoints: (
+//   xs: 0,
+//   sm: 576px,
+//   md: 768px,
+//   lg: 992px,
+//   xl: 1200px
+// )
