--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,21 @@
 @import "layout/products";
 
 @import "pages/home";
+@import "pages/cloud-vps-servers";
+@import "pages/germany-kvm-linux-vps";
+@import "pages/germany-server";
+@import "pages/germany-vps";
+@import "pages/germany-windows-vps";
+@import "pages/netherlands-dedicated-servers";
+@import "pages/netherlands-kvm-linux-vps";
+@import "pages/netherlands-vps";
+@import "pages/netherlands-windows-vps";
+@import "pages/reseller-hosting";
+@import "pages/russia-kvm-linux-vps";
+@import "pages/russia-server";
+@import "pages/shared-hosting";
+@import "pages/usa-dedicated-servers";
+
 
 // $grid-breakpoints: (
 //   xs: 0,
